sort.basic.bubble.AlgBubbleSort2.scala.error
Compilation error:
AlgBubbleSort2:6: error: value >- is not a member of Int
               while (b>-2)
                       ^